--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,6 @@ csv = "1.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
 rayon = "1.10"
+
+[dev-dependencies]
+approx = "0.5"
