--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ csv = "1.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
 rayon = "1.10"
+crossbeam-channel = "0.5"
+parking_lot = "0.12"
 
 [dev-dependencies]
 approx = "0.5"
