--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ serde_yaml = "0.9"
 rayon = "1.10"
 crossbeam-channel = "0.5"
 parking_lot = "0.12"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
 [dev-dependencies]
 approx = "0.5"
