--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ parking_lot = "0.12"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 levenberg-marquardt = "0.15.0"
+rand = "0.8"
 
 [dev-dependencies]
 approx = "0.5"
